<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signin_container"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/signin_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_edittext"
            android:hint="@string/id_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwd_edittext"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:backgroundTint="@android:color/darker_gray"
            app:rippleColor="@android:color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/sign_up"
            android:backgroundTint="@android:color/darker_gray"
            app:rippleColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>