<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/nav_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/nav_header"
        android:background="@color/light_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray"/>

    <LinearLayout
        android:id="@+id/room_id_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/nav_header"/>

        <LinearLayout
            android:id="@+id/room_name_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_name2"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/room_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="room name"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/room_id_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_ID2"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/room_id_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="room code"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copy_room_id_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:backgroundTint="@android:color/darker_gray"
            app:rippleColor="@android:color/white"
            android:text="@string/copy_room_id"
            android:textColor="@color/white"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/line_gray"/>

    <LinearLayout
        android:id="@+id/set_key_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/key_setting"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/key_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/input_key"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_key_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:backgroundTint="@android:color/darker_gray"
            app:rippleColor="@android:color/white"
            android:text="@string/save_key"
            android:textColor="@color/white"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/line_gray"/>

</LinearLayout>