<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinChatActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_field_container"
        android:layout_marginBottom="50dp"
        android:text="@string/join"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/text_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rID_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/room_ID"
            android:inputType="number"
            android:textAlignment="center"/>

        <LinearLayout
            android:id="@+id/confirm_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/join_btn"
                android:text="@string/join_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@android:color/darker_gray"
                app:rippleColor="@color/white"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_btn"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@android:color/darker_gray"
                app:rippleColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>